# DataStructure

./: CMakeLists.txt  README.md  ppt.odp  te zeggen tijdens dia
docs/: gitLink.txt
include/LSystem/: Validation.h
lib/L_System/include/: HashFunction.h  HelpFunctions.hpp  LSystemInterpreter.h  LSystemInterpreter.hpp  Production.h  Production.hpp  Validation.h  Validation.hpp
lib/L_System/src/: HashFunction.cpp  HelpFunctions.cpp  LSystemInterpreter.cpp  Production.cpp  Validation.cpp
output/: Dragon1671222353.txt  Numberlines1671181317.txt  Numberlines1674390054.txt  Plant1674475501.txt  SnowWindow1671222358.txt  Triangle1671222347.txt  Weirdness1674319993.txt  test1670756638.txt  test1670757930.txt  test1670758035.txt  test1670758170.txt  test1670758207.txt  test1670758243.txt  test1670759245.txt  test1670759300.txt  test1670857701.txt  test1670857884.txt  test1670857922.txt  testHilbert1670860954.txt  testSnowWindow1670862288.txt  testTriangle1670860091.txt  testTriangle1670861659.txt  testTriangle1670861856.txt
src/: Turtle.py  main.cpp  pyvenv.cfg
src/LSystem/: LSystemInterpreter.cpp  Production.cpp  Validation.cpp
test/: main.cpp
test/L_System/: U_HashFunction.cpp  U_HelpFunctions.cpp  U_LSystemInterpreter.cpp  U_Production.cpp  U_Validation.cpp
test/Production/: U_Production.cpp
test/lib/L_System/: U_HelpFunctions.cpp  U_LSystemInterpreter.cpp  U_Production.cpp  U_Validation.cpp
